fixed icon alignment

--- a/bridge-child/f1-styles.scss
+++ b/bridge-child/f1-styles.scss
@@ -65,6 +65,8 @@
 
   &__headline {
     font-size: 42px;
+    display: flex;
+    align-items: center;
 
     img {
       margin-right: 10px;
